--- a/config.py.EXAMPLE
+++ b/config.py.EXAMPLE
@@ -22,22 +22,28 @@ listening_port = 8081
 #   can use whichever GPIO you prefer/have available.
 
 ### Outputs
-gpio_heat = 11  # Switches zero-cross solid-state-relay
-gpio_cool = 10  # Regulates PWM for 12V DC Blower
-gpio_air  = 9   # Switches 0-phase det. solid-state-relay
+#gpio_heat = 11  # Switches zero-cross solid-state-relay
+#gpio_cool = 10  # Regulates PWM for 12V DC Blower
+#gpio_air  = 9   # Switches 0-phase det. solid-state-relay
+gpio_heat1 = "GPIO1_17"  # Switches zero-cross solid-state-relay
+gpio_heat2 = "GPIO3_19"  # Switches zero-cross solid-state-relay
+gpio_air   = "GPIO1_16"   # Switches 0-phase det. solid-state-relay
+gpio_beeper = "GPIO1_28"   # Switches beeper
 
 ### Inputs
-gpio_door = 18
+gpio_door = "GPIO2_21"
 
 ### Thermocouple Adapter selection (MAX31855 or MAX6675)
 max31855 = 1
 max6675 = 0
 
 ### Thermocouple I2C Connection
-gpio_sensor_cs = 27
-gpio_sensor_clock = 22
-gpio_sensor_data = 17
-
+#gpio_sensor_cs = 27
+#gpio_sensor_clock = 22
+#gpio_sensor_data = 17
+spi_port = 1
+spi_sensor1_cs = 0
+spi_sensor2_cs = 1
 
 ########################################################################
 #
